--- a/UT 1 - Desarrollo de aplicaciones moviles/PMDM01_17_MiniproyectoConectarseInternet/app/src/main/AndroidManifest.xml
+++ b/UT 1 - Desarrollo de aplicaciones moviles/PMDM01_17_MiniproyectoConectarseInternet/app/src/main/AndroidManifest.xml
@@ -3,6 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="https" />
+        </intent>
+    </queries>
     <application
         android:allowBackup="true"
         android:usesCleartextTraffic="true"
