--- a/UT 1 - Desarrollo de aplicaciones moviles/PMDM01_20_MiniproyectoABNTutorPanel_Room_Database/gradle/libs.versions.toml
+++ b/UT 1 - Desarrollo de aplicaciones moviles/PMDM01_20_MiniproyectoABNTutorPanel_Room_Database/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ activityCompose = "1.12.2"
 composeBom = "2024.09.00"
 room = "2.6.1"
 datastore = "1.0.0"
+uiGraphics = "1.10.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -36,6 +37,7 @@ androidx-datastore-preferences = { group = "androidx.datastore", name = "datasto
 
 # ViewModel y Lifecycle
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version = "2.7.0" }
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "uiGraphics" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
